structure, license and version update (v0.1.0)

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@adimis/react-schema-table",
   "author": "AdimisDev",
   "private": false,
-  "version": "0.0.9",
-  "license": "MIT",
+  "version": "0.1.0",
+  "license": "GNU",
   "type": "module",
   "main": "dist/index.umd.js",
   "types": "dist/index.d.ts",
