--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "@adimis/react-schema-table",
   "author": "AdimisDev",
   "private": false,
-  "version": "0.1.8",
+  "version": "0.1.9",
   "license": "GNU",
   "type": "module",
   "main": "dist/index.umd.js",
+  "module": "dist/index.es.js",
+  "umd:main": "dist/index.umd.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/",
@@ -33,9 +35,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.4",
