--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lucide-react": "^0.375.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vite-plugin-dts": "^3.9.0"
